bugfix compliler optimisation in dataAssembler (branch with assert removed by compier)

--- a/DataAssembler/DataAssembler.vcxproj
+++ b/DataAssembler/DataAssembler.vcxproj
@@ -177,6 +177,8 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <Optimization>MaxSpeed</Optimization>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
