--- a/fx/fx.vcxproj
+++ b/fx/fx.vcxproj
@@ -178,7 +178,9 @@
     <ClInclude Include="dx11\textures.h" />
     <ClInclude Include="editor\editor.h" />
     <ClInclude Include="editor\editorWindow.h" />
+    <ClInclude Include="editor\font.h" />
     <ClInclude Include="editor\hotReload.h" />
+    <ClInclude Include="editor\style.h" />
     <ClInclude Include="editor\timeLine.h" />
     <ClInclude Include="editor\uiDraw.h" />
     <ClInclude Include="generated\constBufReflect.h" />
