--- a/fx/fx.vcxproj.filters
+++ b/fx/fx.vcxproj.filters
@@ -128,6 +128,12 @@
     <ClInclude Include="editor\timeLine.h">
       <Filter>Source Files\editor</Filter>
     </ClInclude>
+    <ClInclude Include="editor\font.h">
+      <Filter>Source Files\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="editor\style.h">
+      <Filter>Source Files\editor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="todo.txt">
