--- a/fx/fx.vcxproj.filters
+++ b/fx/fx.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Source Files\projectFiles\shadersSource\ui">
       <UniqueIdentifier>{9a898832-04c4-4db4-9929-0b27abf85e4d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\sound">
+      <UniqueIdentifier>{821ad417-7f85-4c8d-ba21-f6215f748da3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -148,6 +151,24 @@
     </ClInclude>
     <ClInclude Include="utils.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sound\tracker.h">
+      <Filter>Source Files\sound</Filter>
+    </ClInclude>
+    <ClInclude Include="generated\apiReflection.h">
+      <Filter>Source Files\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="projectFiles\cubemap.h">
+      <Filter>Source Files\projectFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="projectFiles\object.h">
+      <Filter>Source Files\projectFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="editor\cmdEditService.h">
+      <Filter>Source Files\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="editor\paramEdit.h">
+      <Filter>Source Files\editor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
